# agent-long-token

./: .gitignore  CLAUDE.md  Makefile  PROPOSAL.md  README.md  pyproject.toml
.claude/: features.json  memory.md  settings.json  sp-harness.json  todos.json
.claude/agents/: sp-feedback.md
.claude/hooks/: update-context-reminder.sh
agentdiet/: agents.py  aggregate.py  baseline.py  compress.py  config.py  dataset.py  debate.py  evaluate.py  extract_claims.py  llm_client.py  prompts.py  report.py  types.py  voting.py
agentdiet/analysis/: ablate.py  flip.py  signals.py
agentdiet/analysis_phase/: __init__.py  bootstrap.py  characterize.py  figure_phase_diagram.py
agentdiet/cli/: ablate.py  analyze.py  analyze_phase.py  collect.py  evaluate.py  extract.py  gate.py  grid.py  health.py  pilot.py  rejudge.py  reparse.py  report.py  spot_check.py
agentdiet/debate/: __init__.py  code_protocol.py
agentdiet/eval/: __init__.py  base.py  clustering.py  datasets.py  judges.py
agentdiet/grid/: __init__.py  orchestrator.py  runner.py  types.py
artifacts/serving/: gpt_oss_smoke.json  qwen3_smoke.json
docs/: PROJECT_GUIDE.md  policy.sample.json
docs/design-docs/: 2026-04-21-multi-agent-debate-claim-analysis-design.md  2026-04-27-debate-phase-mapping-design.md
docs/reports/: check-in-2026-04-22.md  check-in-2026-04-22.tex  final-report.template.md  final-report.tex
docs/runbooks/: aime-data-sourcing.md  gpt-oss-vllm-serving.md  qwen3-vllm-serving.md
scripts/: run_grid_cells.sh  serve_vllm.sh  wait_healthy.py
scripts/datasets/: fetch_aime.py
(+230 files in other folders)
